// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should render an icon button 1`] = `
<DocumentFragment>
  <button
    class="bg-transparent inline-flex items-center rounded-lg text-sm text-gray-400 p-1.5 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-800 dark:hover:text-white "
  >
    <svg
      aria-hidden="true"
      class="h-5 w-5"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button > should render primary button 1`] = `
<DocumentFragment>
  <button
    class="flex items-center rounded-lg font-medium text-base text-center px-5 py-2.5 text-white bg-blue-700 hover:bg-blue-800 "
  >
    primary
  </button>
</DocumentFragment>
`;

exports[`Button > should render secondary button 1`] = `
<DocumentFragment>
  <button
    class="flex items-center rounded-lg font-medium text-base text-center px-5 py-2.5 text-gray bg-gray-200 hover:bg-gray-300 "
  >
    secondary
  </button>
</DocumentFragment>
`;

exports[`Button > should render svgClose button 1`] = `
<DocumentFragment>
  <button
    class="bg-transparent inline-flex items-center rounded-lg text-sm text-gray-400 p-1.5 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-800 dark:hover:text-white "
  >
    svgClose
  </button>
</DocumentFragment>
`;

exports[`Button > should render tertiary button 1`] = `
<DocumentFragment>
  <button
    class="flex items-center rounded-lg font-medium text-base text-center px-5 py-2.5 text-white bg-green-500 hover:bg-green-600 "
  >
    tertiary
  </button>
</DocumentFragment>
`;

exports[`Button > should render textLink button 1`] = `
<DocumentFragment>
  <button
    class="undefined "
  >
    textLink
  </button>
</DocumentFragment>
`;

exports[`Button > should render warning button 1`] = `
<DocumentFragment>
  <button
    class="flex items-center rounded-lg font-medium text-base text-center px-5 py-2.5 text-white bg-red-700 hover:bg-red-800 "
  >
    warning
  </button>
</DocumentFragment>
`;
